<resources>
    <string name="app_name">My Application</string>
    <string name="back_arrow">Back</string>
    <string name="age_limitation">13+</string>
    <string name="title_text">Avengers:<br/>End Game</string>
    <string name="category_of_movie">Action, Adventure, Fantasy</string>
    <string name="reviewers">125 Reviews</string>
    <string name="storyline">Storyline</string>
    <string name="about_movie">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="nameActor1">Robert Downey Jr.</string>
    <string name="nameActor2">Chris Evans</string>
    <string name="nameActor3">Mark Ruffalo</string>
    <string name="nameActor4">Chris Hemsworth</string>
</resources>